--- a/Src/Web/Web.config
+++ b/Src/Web/Web.config
@@ -13,7 +13,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="connectionStringMain" providerName="System.Data.SqlClient" connectionString="Data Source=prenotalo.database.windows.net,1433;Initial Catalog=prenotalo;User Id=uadmin;Password=Prenotalo_1307;" />
+    <add name="connectionStringMain" providerName="System.Data.SqlClient" connectionString="Data Source=xxx.database.windows.net,1433;Initial Catalog=prenotalo;User Id=uadmin;Password=xxxxx;" />
   </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
