simulation in api get

--- a/Src/Web/Web.config
+++ b/Src/Web/Web.config
@@ -12,6 +12,9 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  <appSettings>
+    <add key="simulation" value="1"/>
+  </appSettings>
   <connectionStrings>
     <add name="connectionStringMain" providerName="System.Data.SqlClient" connectionString="Data Source=xxx.database.windows.net,1433;Initial Catalog=prenotalo;User Id=uadmin;Password=xxxxx;" />
   </connectionStrings>
